# work-time-prediction

./: .gitignore  README.md  pyproject.toml
schemas/main_database/: indexes.sql  tables.sql  triggers.sql  views.sql
schemas/session_database/: indexes.sql  tables.sql
src/work_time_prediction/: main.py
src/work_time_prediction/api/: __init__.py  predict.py  required_columns_mapping.py  session.py  sessions.py  status.py  train.py  train_models.py
src/work_time_prediction/api/middleware/: quota_middleware.py
src/work_time_prediction/core/: api.py  constants.py  database.py  exceptions.py  ml_state.py  model_state.py  predictions.py  quota_manager.py  required_columns.py  session_manager.py  train_models.py  utils.py
src/work_time_prediction/core/security/: admin_auth.py
src/work_time_prediction/core/utils/: folder_manager.py  logging_config.py  temporal_features.py  time_converter.py  token_generator.py
src/work_time_prediction/models/: Session_info_response.py  database.py  predict_request.py  predict_response.py  required_columns_mapping_request.py  session_create_response.py  session_info_response.py
test/: test_api.py  test_api_predict.py  test_api_status.py  test_api_train.py  test_database.py  test_predictions.py  test_train_models.py
