[project]
name = "work-time-prediction"
version = "0.1.0"
description = "Prediction of arrival and departure times of MINDDEVEL Cameroon employees."
authors = [
    {name = "EnamSon",email = "junior.enama@facsciences-uy1.cm"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]
