[project]
name = "work-time-prediction"
version = "0.1.0"
description = "Prediction of arrival and departure times of MINDDEVEL Cameroon employees."
authors = [
    {name = "EnamSon",email = "junior.enama@facsciences-uy1.cm"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "cachetools (>=6.2.1,<7.0.0)",
    "apscheduler (>=3.11.1,<4.0.0)"
]

[tool.poetry]
name = "work-time-prediction"
version = "0.1.0"
packages = [{include = "work_time_prediction", from = "src"}]

[tool.poetry.scripts]
work-time-prediction = "work_time_prediction.main:run"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
warn_unused_ignores = true
warn_unused_configs = true
mypy_path = ["src", "test"]
files = ["src", "test"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
stubs = [
    "pandas-stubs (>=2.3.2.250926,<3.0.0.0)"
]
types = [
    "types-cachetools (>=6.2.0.20251022,<7.0.0.0)"
]
